--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Download Cakemarketincome</title>
+<title>Download File</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -42,7 +42,7 @@
 <script>
 document.getElementById('downloadBtn').addEventListener('click', function() {
     // Specify the file URL
-    var fileURL = 'Cakemarketincome.xlsx';
+    var fileURL = 'Mohammed Ahmed Jamil Joma G-5B.docx';
 
     // Create an anchor element
     var a = document.createElement('a');
